force-app/main/default/objects/Unallocated_Payment__c/Unallocated_Payment__c.object-meta.xml
<CustomObject>
    <description>This will store unallocated amounts for Insolvency Account on Remittance</description>
    <label>Unallocated Payment</label>
    <nameField>
        <displayFormat>UPN - {0000}</displayFormat>
        <label>Unallocated Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unallocated Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>