force-app/main/default/objects/Unallocated_Payment__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Store Insolvency Account number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>