force-app/main/default/objects/Unallocated_Payment__c/fields/Actioned__c.field-meta.xml
<CustomField>
    <fullName>Actioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actioned</label>
    <type>Checkbox</type>
</CustomField>