force-app/main/default/objects/Unallocated_Payment__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To know whether this is unallocated amount is allocated to some Insolvency Account or not</description>
    <label>Allocated</label>
    <type>Checkbox</type>
</CustomField>