force-app/main/default/objects/Unallocated_Payment__c/fields/Allocated_To__c.field-meta.xml
<CustomField>
    <fullName>Allocated_To__c</fullName>
    <description>list of system names to which unallocated payment is allocated to. DebtNext value has been Modified to Distressed value.</description>
    <inlineHelpText>list of system names to which unallocated payment is allocated to</inlineHelpText>
    <label>Allocated To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCS</fullName>
            </value>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>FDR</fullName>
            </value>
            <value>
                <fullName>Distressed</fullName>
            </value>
            <value>
                <fullName>Megasys</fullName>
                <isActive>false</isActive>
                <label>Megasys</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>