force-app/main/default/objects/Unallocated_Payment__c/fields/Any_other_comments__c.field-meta.xml
<CustomField>
    <fullName>Any_other_comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Any other comments</label>
    <type>TextArea</type>
</CustomField>