force-app/main/default/objects/Unallocated_Payment__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link to to assignment</description>
    <inlineHelpText>To link to to assignment</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Unallocated Payment</relationshipLabel>
    <relationshipName>Unallocated_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>