force-app/main/default/objects/Unallocated_Payment__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank Name from Insolvency Account</description>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scotia Bank</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>MBNA</fullName>
            </value>
            <value>
                <fullName>TD Bank</fullName>
            </value>
            <value>
                <fullName>Tangerine</fullName>
            </value>
            <value>
                <fullName>Auto Capital</fullName>
            </value>
            <value>
                <fullName>Progressa</fullName>
            </value>
            <value>
                <fullName>Lendcare</fullName>
            </value>
            <value>
                <fullName>Fairstone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>