force-app/main/default/objects/Unallocated_Payment__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>