force-app/main/default/objects/Unallocated_Payment__c/fields/Created_by_Striplist_Parsing__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Striplist_Parsing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to set to true when payment is created by Striplist parsing</description>
    <inlineHelpText>Checkbox to set to true when payment is created by Striplist parsing</inlineHelpText>
    <label>Created by Striplist Parsing</label>
    <type>Checkbox</type>
</CustomField>