force-app/main/default/objects/Unallocated_Payment__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Updated Customer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>