force-app/main/default/objects/Unallocated_Payment__c/fields/Debtor_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Debtor / Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>