force-app/main/default/objects/Unallocated_Payment__c/fields/Deposit_Slip__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Slip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the generated Deposit Slip</description>
    <inlineHelpText>Link to the generated Deposit Slip</inlineHelpText>
    <label>Deposit Slip</label>
    <referenceTo>Deposit_Slip__c</referenceTo>
    <relationshipLabel>Unallocated Payment</relationshipLabel>
    <relationshipName>Unallocated_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>