force-app/main/default/objects/Unallocated_Payment__c/fields/EFT_Files__c.field-meta.xml
<CustomField>
    <fullName>EFT_Files__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to EFT record</description>
    <label>EFT Files</label>
    <referenceTo>EFT_Files__c</referenceTo>
    <relationshipLabel>Unallocated Payment</relationshipLabel>
    <relationshipName>Unallocated_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>