force-app/main/default/objects/Unallocated_Payment__c/fields/Estate_Number__c.field-meta.xml
<CustomField>
    <fullName>Estate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>