force-app/main/default/objects/Unallocated_Payment__c/fields/Is_Payment_Remitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Remitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To track if unallocated payment has been remitted back to bank</description>
    <inlineHelpText>To track if unallocated payment has been remitted back to bank</inlineHelpText>
    <label>Is Payment Remitted</label>
    <type>Checkbox</type>
</CustomField>