force-app/main/default/objects/Unallocated_Payment__c/fields/Is_Payments_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Is_Payments_Reversed__c</fullName>
    <label>Payment Reversed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Unauthorised</fullName>
            </value>
            <value>
                <fullName>Stale Dated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>