force-app/main/default/objects/Unallocated_Payment__c/fields/Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type__c</fullName>
    <formula>Remitted_Back_To__r.RecordType.Name</formula>
    <label>Parent Record Type</label>
    <type>Text</type>
</CustomField>