force-app/main/default/objects/Unallocated_Payment__c/fields/Payment_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posting_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Posting Date</label>
    <type>Date</type>
</CustomField>