force-app/main/default/objects/Unallocated_Payment__c/fields/Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remittance Cheque Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>