force-app/main/default/objects/Unallocated_Payment__c/fields/Remittance__c.field-meta.xml
<CustomField>
    <fullName>Remittance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dividends</label>
    <referenceTo>Remittance__c</referenceTo>
    <relationshipLabel>Unallocated Payment</relationshipLabel>
    <relationshipName>Unallocated_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>