force-app/main/default/objects/Unallocated_Payment__c/fields/Remitted_Back_To__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Back_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remitted Back To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>CCS Agency</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Scotia</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>MBNA</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Trustee Company</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>TD Bank</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>SDA</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Auto Capital</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Tangerine Bank</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Progressa</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Money Mart</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unallocated Payment</relationshipLabel>
    <relationshipName>Unallocated_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>