force-app/main/default/objects/Unallocated_Payment__c/fields/Remitted_Back_to_Formula__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Back_to_Formula__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remitted Back to Formula</label>
    <length>20</length>
    <type>Text</type>
</CustomField>