force-app/main/default/objects/Unallocated_Payment__c/fields/Remitted_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Bank_Name__c</fullName>
    <description>Bank name to track unallocated payment that has been remitted back</description>
    <inlineHelpText>Bank name to track unallocated payment that has been remitted back</inlineHelpText>
    <label>Remitted Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MBNA</fullName>
            </value>
            <value>
                <fullName>Scotia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>