force-app/main/default/objects/Unallocated_Payment__c/fields/Remitted_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Cheque_Number__c</fullName>
    <description>Remitted Cheque Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Remitted Cheque Number</inlineHelpText>
    <label>Remitted Cheque Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>