force-app/main/default/objects/Unallocated_Payment__c/fields/Reviewed_status__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_status__c</fullName>
    <label>Reviewed status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sold to Canaccede</fullName>
            </value>
            <value>
                <fullName>Need to be remitted</fullName>
            </value>
            <value>
                <fullName>Unable To Locate Account - More Information Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>