force-app/main/default/objects/Unallocated_Payment__c/fields/SOR_Allocated_Date__c.field-meta.xml
<CustomField>
    <fullName>SOR_Allocated_Date__c</fullName>
    <description>Date on which payment is posted to SOR viz FDR, Megasys or DebtNext</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which payment is posted to SOR viz FDR, Megasys or DebtNext</inlineHelpText>
    <label>SOR Allocated Date</label>
    <type>Date</type>
</CustomField>