force-app/main/default/objects/Unallocated_Payment__c/fields/SOR_Cheque_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>SOR_Cheque_Reference_Number__c</fullName>
    <description>Cheque reference number on which payment is posted to SOR viz FDR, Megasys or DebtNext</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cheque reference number on which payment is posted to SOR viz FDR, Megasys or DebtNext</inlineHelpText>
    <label>SOR Cheque Reference Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>