force-app/main/default/objects/Unallocated_Payment__c/fields/Source_File_Link__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Link__c</fullName>
    <description>Source file URL for payments from EFT Processing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Source file URL for payments from EFT Processing</inlineHelpText>
    <label>Source File Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>