force-app/main/default/objects/Unallocated_Payment__c/fields/Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Amount__c</fullName>
    <description>Store unallocated amount for Remittance</description>
    <label>Unallocated Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>