force-app/main/default/objects/Unallocated_Payment__c/fields/Unallocated_Fairshare_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Fairshare_Amount__c</fullName>
    <label>Unallocated Fairshare Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>