force-app/main/default/objects/Unallocated_Payment__c/fields/Updated_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Updated_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Updated Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>