force-app/main/default/objects/Unallocated_Payment__c/validationRules/Actioned_before_remitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Actioned_before_remitted</fullName>
    <active>true</active>
    <description>record can not be action-ed if it is not remitted</description>
    <errorConditionFormula>AND(
 Is_Payment_Remitted__c = false,
  ISCHANGED( Actioned__c ) 
)</errorConditionFormula>
    <errorMessage>Payment cannot be marked as action-ed if payment is not remitted back.</errorMessage>
</ValidationRule>