force-app/main/default/objects/Unallocated_Payment__c/validationRules/Allocated_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocated_Payment</fullName>
    <active>true</active>
    <description>Once payment is allocated, do not allow payment to be updated</description>
    <errorConditionFormula>OR(AND( 
ISCHANGED( Allocated__c ), Allocated__c = false), 
AND(NOT(ISCHANGED(Allocated__c )), Allocated__c = true))</errorConditionFormula>
    <errorMessage>Payment is allocated hence you can not update the record</errorMessage>
</ValidationRule>