force-app/main/default/objects/Unallocated_Payment__c/validationRules/Is_Payment_Reversed.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Payment_Reversed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND( 
ISCHANGED(  Is_Payments_Reversed__c ), 
OR( 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;NFS&quot;), 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;Stopped&quot;), 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;Unauthorised&quot;), 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;Stale Dated&quot;))),
AND( 
NOT(ISCHANGED(  Is_Payments_Reversed__c )), 
OR( 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;NFS&quot;), 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;Stopped&quot;), 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;Unauthorised&quot;), 
ISPICKVAL(PRIORVALUE(Is_Payments_Reversed__c ) , &quot;Stale Dated&quot;)))


)</errorConditionFormula>
    <errorMessage>Once the Payment is reversed it cannot  be updated</errorMessage>
</ValidationRule>