force-app/main/default/objects/Unallocated_Payment__c/listViews/Allocated_Payment.listView-meta.xml
<ListView>
    <fullName>Allocated_Payment</fullName>
    <columns>NAME</columns>
    <columns>Remittance__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Estate_Number__c</columns>
    <columns>Debtor_Name__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allocated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Allocated Payment</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
    </sharedTo>
</ListView>