force-app/main/default/objects/Unallocated_Payment__c/listViews/CCS_Unallocated_Payment.listView-meta.xml
<ListView>
    <fullName>CCS_Unallocated_Payment</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Remittance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unallocated_Payment__c.CCS</value>
    </filters>
    <filters>
        <field>Allocated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Is_Payment_Remitted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Is_Payments_Reversed__c</field>
        <operation>equals</operation>
    </filters>
    <label>CCS Unallocated Payment</label>
    <sharedTo>
        <group>CCS_CFG_BS</group>
        <group>CCS_CFG_User</group>
    </sharedTo>
</ListView>