force-app/main/default/objects/Unallocated_Payment__c/listViews/Created_By_Striplist.listView-meta.xml
<ListView>
    <fullName>Created_By_Striplist</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Debtor_Name__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_by_Striplist_Parsing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Created By Striplist</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
    </sharedTo>
</ListView>