force-app/main/default/objects/Unallocated_Payment__c/listViews/EFT_Insolvency_Unallocated_Payments.listView-meta.xml
<ListView>
    <fullName>EFT_Insolvency_Unallocated_Payments</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Cheque_Number__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_by_EFT_Processing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unallocated_Payment__c.Insolvency</value>
    </filters>
    <label>EFT Insolvency Unallocated Payments</label>
    <sharedTo>
        <group>Insolvency_CFG_Users</group>
    </sharedTo>
</ListView>