force-app/main/default/objects/Unallocated_Payment__c/listViews/Remitted_Back_To_TD_Bank.listView-meta.xml
<ListView>
    <fullName>Remitted_Back_To_TD_Bank</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Remittance__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Estate_Number__c</columns>
    <columns>Debtor_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Payment_Remitted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unallocated_Payment__c.Insolvency</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Remitted_Back_To__c</field>
        <operation>equals</operation>
        <value>TD Bank</value>
    </filters>
    <label>Remitted Back To TD Bank</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
    </sharedTo>
</ListView>