force-app/main/default/objects/Unallocated_Payment__c/listViews/To_be_reviewed_by_CFG.listView-meta.xml
<ListView>
    <fullName>To_be_reviewed_by_CFG</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Updated_Account_Number__c</columns>
    <columns>Debtor_Name__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>Unallocated_Fairshare_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bank_Name__c</field>
        <operation>equals</operation>
        <value>Scotia Bank,SPL,SDA</value>
    </filters>
    <filters>
        <field>Reviewed_status__c</field>
        <operation>equals</operation>
        <value>Sold to Canaccede</value>
    </filters>
    <filters>
        <field>Is_Payment_Remitted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Allocated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>To be reviewed by CFG - Sold to CFG</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
        <group>Insolvency_Canaccede_Users</group>
        <group>Scotia_Unallocated_public_group</group>
    </sharedTo>
</ListView>